--- a/angular-app/src/app/ui/roles/roles.component.html
+++ b/angular-app/src/app/ui/roles/roles.component.html
@@ -1,1 +1,22 @@
-<p>roles works!</p>
+<div class="p-3">
+<div class="card">
+  <div class="card-header">Roles</div>
+    <div class="card-body">
+    <h1>Roles</h1>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Name</th>
+          </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let r of Roles">
+          <td>{{r.id}}</td>
+          <td>{{r.name}}</td>
+        </tr>
+        </tbody>
+      </table>
+  </div>
+</div>
+</div>
