--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -10,13 +10,13 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/roles">Roles</a>
+          <a class="nav-link" routerLink="/roles" *ngIf="keycloakService.getUserRoles().includes('ADMIN')">Roles</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/customers">Customers</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Dropdown
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -28,6 +28,22 @@
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <span *ngIf="profile;else login_template">{{profile.username}}</span>
+            <ng-template #login_template>
+              <button class="btn btn-success" (click)="handleLogin()">Login</button>
+            </ng-template>
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" (click)="handleLogin()">Login</a></li>
+            <li><a class="dropdown-item" (click)="handleLogout()">Logout</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
         </li>
       </ul>
       <form class="d-flex">
