--- a/angular-app/src/app/ui/roles/roles.component.html
+++ b/angular-app/src/app/ui/roles/roles.component.html
@@ -11,7 +11,7 @@
           </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let r of Roles">
+        <tr *ngFor="let r of roles">
           <td>{{r.id}}</td>
           <td>{{r.name}}</td>
         </tr>
