--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -1,58 +1,64 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" href="#"><i class="bi bi-house-door"></i> Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="#"><i class="bi bi-house"></i> Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/roles" *ngIf="keycloakService.getUserRoles().includes('ADMIN')">Roles</a>
+          <a class="nav-link" routerLink="/roles" *ngIf="keycloakService.getUserRoles().includes('ADMIN')">
+            <i class="bi bi-shield-lock"></i> Roles
+          </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/customers">Customers</a>
+          <a class="nav-link" routerLink="/customers"><i class="bi bi-people"></i> Customers</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
+            <i class="bi bi-gear"></i> Services
           </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#"><i class="bi bi-lightning"></i> Action</a></li>
+            <li><a class="dropdown-item" href="#"><i class="bi bi-wrench"></i> Another action</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="#"><i class="bi bi-tools"></i> Something else here</a></li>
           </ul>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
       </ul>
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+      <!-- Profil -->
+      <ul class="navbar-nav profile-dropdown">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <span *ngIf="profile;else login_template">{{profile.username}}</span>
+
+            <span *ngIf="profile; else login_template">
+            <i class="bi bi-person-circle"></i> {{ profile.username }}
+            </span>
             <ng-template #login_template>
-              <button class="btn btn-success" (click)="handleLogin()">Login</button>
+              <button class="btn btn-light" (click)="handleLogin()">Login</button>
             </ng-template>
           </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" (click)="handleLogin()">Login</a></li>
-            <li><a class="dropdown-item" (click)="handleLogout()">Logout</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" (click)="handleLogout()"><i class="bi bi-box-arrow-right"></i> Logout</a></li>
           </ul>
         </li>
       </ul>
-      <form class="d-flex">
+
+      <!-- Barre de recherche -->
+      <form class="d-flex ms-3">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <button class="btn btn-outline-success" type="submit">
+          <i class="bi bi-search"></i>
+        </button>
       </form>
     </div>
   </div>
 </nav>
-<router-outlet>
 
-</router-outlet>
+<router-outlet></router-outlet>
