--- a/angular-app/src/app/ui/customers/customers.component.html
+++ b/angular-app/src/app/ui/customers/customers.component.html
@@ -1,9 +1,22 @@
 <div class="p-3">
-<div class="card">
-  <div class="card-header">Customers</div>
-  <div class="card-body">
-    <h1>Customers</h1>
+  <div class="card shadow">
+    <div class="card-header ">Customers</div>
+    <div class="card-body">
+      <h1 >Customers</h1>
+    </div>
+    <table  class="table table-bordered shadow-sm">
+      <thead>
+      <tr>
+        <th>ID</th>
+        <th>Name</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr >
+        <td></td>
+        <td></td>
+      </tr>
+      </tbody>
+    </table>
   </div>
-  <p>HHH</p>
-</div>
 </div>
