--- a/angular-app/src/app/ui/roles/roles.component.html
+++ b/angular-app/src/app/ui/roles/roles.component.html
@@ -3,7 +3,7 @@
   <div class="card-header">Roles</div>
     <div class="card-body">
     <h1>Roles</h1>
-      <table class="table">
+      <table  class="table table-bordered shadow-sm">
         <thead>
           <tr>
             <th>ID</th>
